# open-media-player

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  configure  init.lua  lazy-lock.json
.cache/clangd/index/: decoder.cpp.4DF80EE1F4A71696.idx  decoder.h.C9CDBD57728268EE.idx  exception.h.F381B110B7F3AE30.idx  main.cpp.9DD33ED6AE114A3F.idx
examples/: example_1.cpp
lsp/: clangd.lua
lua/config/: borders.lua  bufferline.lua  colors.lua  keymaps.lua  noice.lua  nvim-tree.lua  telescope.lua
lua/plugins/: spec.lua
src/: main.cpp
src/common/: exception.h  logger.h
src/pipeline/: decoder.cpp  decoder.h
